<resources>
    <string name="app_name">LSC UD</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Diccionario</string>
    <string name="menu_slideshow">Días</string>
    <string name="menu_tools">Cuestionario</string>
    <string name="menu_share">Info APP</string>
    <string name="menu_send">Send</string>
    <string name="LSC">Lenguaje De Señas Colombiano</string>
    <string name="GV">Grupo VIRTUS Universidad Distrital</string>
    <string name="DICC">Diccionario</string>
    <string name="menu_Historia">Historia</string>
    <string name="title_activity_hlsc">Historia Lenguaje Señas Colombiano</string>
    <string name="large_text">
        "¿Tres lenguas de señas en Colombia?\n\n"

        "La Lengua de Señas Colombiana, LSC, es el sistema que se reconoce ser usado por la población
        sorda del país. Si atendemos la literatura especializada, sin embargo, vemos que en Colombia
        hay o ha habido al menos tres lenguas de señas distintas.\n"

        "La primera de ellas, referida por estudios de Woodward (1978) y Washabaugh (1991), es la
        Lengua de Señas de la Isla Providencia. Según los referidos autores, se trata de una lengua
        emergente, surgida por la presencia de un porcentaje alto de personas sordas en esa isla
        caribeña. Los estudios hechos sobre ella no indicaban filiación con ninguna otra lengua de
        señas conocida. No hay evidencias de que esta lengua se use todavía (comunicación personal
        con el Prof. Dr. Lionel Tovar, Universidad del Valle, en 2004).\n"

        "La existencia de un segundo sistema fue referido por una misionera protestante, Fanny
        Bolívar, quien estaba trabajando, hacia el año 2006, con indígenas de la etnia cuiba en los
        llanos colombianos. Según Fanny Bolívar, había un número inusualmente alto de nacimientos de
        niños sordos entre los cuibas, lo que había llevado a desarrollar una lengua de señas propia,
        que no tenía vinculación con la LSC (Fuente: comunicaciones personales con Fanny Bolívar y
        el editor de deaf-atlas, Alejandro Oviedo, en el año 2006). No conocemos referencias posteriores
        acerca de esta lengua.\n\n"

        "La Lengua de Señas Colombiana\n\n"

        "La LSC presenta reconocidas variaciones dialectales. Hasta ahora han sido recolectados dos
        córpora (Cali -Oviedo et al 1998- y Bogotá -ver DBLSC, 2005).\n"

        "En su forma actual, esta lengua parece haber surgido en el internado de la escuela de sordos
        Nuestra Señora de La Sabiduría, fundada en Bogotá el año 1924 (Oviedo 2001 y Ramírez 1996).
        La LSC parece haber surgido de un substrato lingüístico en el que concidieron elementos de
        la Lengua de Señas Francesa (por influencia de las monjas de La Sabiduría, Ramírez 1996),
        Española (muchos niños sordos colombianos estudiaron en escuelas españolas hacia principios
        y mediados del Siglo XX) y Estadounidense (posterior influencia de misioneros y viajeros).\n\n"

        "La existencia de una lengua de señas en Colombia es reconocida oficialmente desde el año 1996,
        a través de la Ley 324. En esa Ley, la LSC es denominada Lengua Manual Colombiana. La Ley 324
        dispone diversas provisiones para el uso social de la lengua de señas. En su versión original,
        la Ley 324 contenía un reconocimiento explícito de la lengua de señas (“ARTÍCULO 2. El Estado
        Colombiano reconoce la Lengua Manual Colombiana, como idioma propio de la Comunidad Sorda del País”).
        Este artículo fue derogado (declarado “inexequible”) por un proceso jurídico del año 2002.
        El fundamento de tal decisión es que la población sorda colombiana también hace uso del español
        hablado (algunas personas incluso lo usan de modo exclusivo), por lo que la ley no puede
        determinar provisiones únicamente para la población señante.\n\n"

        "Según el Censo 2005, había 2.624.898 personas con discapacidad (6.3% del total de la población).
        De ellas, 455.718 reportaron dificultad para oír aún con aparatos especiales y 345.740 reportaron
        dificultades para hablar. Entre estos grupos están las personas sordas (2008:16 y
        Dr. Jaime Collazos, comunicación personal). No es posible saber cuántas de ellas usan la LSC
        como su primera lengua.\n"



    </string>
    <string name="title_activity_colores">Colores</string>

</resources>
